DeploymentCompression.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-compressiondp
  namespace: prod
  annotations:
    kubernetes.io/change-cause:"Deploy to compression"
spec:
  minReadySeconds: 5
  replicas: 5
  selector:
    matchLabels:
      app: compression-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25
      maxUnavailable: 25
  template: 
    metadata: 
      name: compressionpods
      labels: 
        app: compression-app
    spec: 
      containers: 
        - name: compression-container
          image: nginx
          ports:
            - containerPort: 80
          imagePullPolicy: Always
