DeploymentLuminary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-luminarydp
  namespace: prod
  annotations:
    kubernetes.io/change-cause:"Deploy to luminary"
spec:
  minReadySeconds: 5
  replicas: 5
  selector:
    matchLabels:
      app: luminary-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25
      maxUnavailable: 25
  template:
    metadata: 
      labels: 
        app: luminary-app 
    spec:
      containers:
        - name: luminary-containers
          image: nginx
          ports:
            - containerPort: 80
          imagePullPolicy: Always
