Deploymentbeauty.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-beautydp
  namespace: prod
  annotations:
    kubernetes.io/change-cause: "Deploy to beauty"
spec:
  minReadySeconds: 5
  replicas: 5
  selector:
    matchLabels:
      app: beauty-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25
      maxUnavailable: 25
  template:
    metadata: 
      labels: 
        app: beauty-app 
    spec:
      containers:
        - name: beauty-containers
          image: nginx
          ports:
            - containerPort: 80
          imagePullPolicy: Always
