Deploymenthighway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-highwaydp
  namespace: prod
  annotations:
    kubernetes.io/change-cause: "Deploy to highway"
spec:
  minReadySeconds: 5
  replicas: 5
  selector:
    matchLabels:
      app: highway-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25
      maxUnavailable: 25
  template: 
    metadata: 
      name: highwaypods
      labels: 
        app: highway-app
    spec: 
      containers: 
        - name: highway-container
          image: nginx
          ports:
            - containerPort: 80
          imagePullPolicy: Always
