Servicebeauty.yaml
apiVersion: v1
kind: Service
metadata:
  name: mybeautyingress
  namespace: prod
spec:
  type: ClusterIP
  selector: 
    app: beauty-app
  ports: 
    - port: 80
