Servicehighway.yaml
apiVersion: v1
kind: Service
metadata:
  name: myhighwayingress
  namespace: prod
spec: 
  type: clusterIP
  selector: 
    app: highway-app
  ports:
    - port: 80
