Servicelumi.yaml
apiVersion: v1
kind: Service
metadata:
  name: mylumiingress
  namespace: prod
spec:
  type: ClusterIP
  selector: 
    app: luminary-app
  ports: 
    - port: 80
