Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: my.ingress
  namespace: prod
spec:
  rules:
    - http:
        paths:
          - path: /luminary
            pathType: Prefix
            backend:
              service:
                name: luminary-ingress
                port:
                  number: 80
                
    - http:
        paths:
          - path: /compression
            pathType: Prefix
            backend:
              service:
                name: compression-ingress
                port: 
                  number: 80
